--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <button>.</button>
 </div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="scripts.js"></script>
 
 </body>
