2nd phase of project

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  
 </head>
 <body>
-<h1 align="center">ABSA</h1>
+<h1 align="center">Absa-Africanacity</h1>
 <div class="selector open">
   <ul>
     <li style="transform: rotate(0deg);">
@@ -47,7 +47,7 @@
     </li>
     <li style="transform: rotate(480deg);">
       <input id="c9" type="checkbox">
-      <label for="c9" style="transform: rotate(-480deg);"><a class="small" href="./content.html">Crowdfunding</a></label>
+      <label for="c9" style="transform: rotate(-480deg);"><a class="small" href="./crowd.html">Crowdfunding</a></label>
     </li>
   </ul>
   <button>.</button>
